kubernetes/k3s/apps/media/kavita/chart/templates/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita-api
spec:
  hostnames:
    - kavita.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: kavita
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /api/koreader
        - path:
            type: PathPrefix
            value: /api/opds
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateways
